--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -1,3 +1,26 @@
-h1 {
-    color: red;
+header {
+    padding: 20px;
+    border-bottom: 1px solid black;
+}
+
+header div {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+header input {
+    display: inline !important;
+    max-width: 200px;
+}
+
+main {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding: 20px;
+}
+
+main > div {
+    width: 100vw;
 }
